set nowrap for the leftside menu, to fix the overlap text

--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -16,6 +16,7 @@ ul, ul ul {
 .menu {
 	width: auto;
 	height: auto;
+    white-space: nowrap;
 }
 .menu > li > a {
 	width: 100%;
